Performance: direct byte[] hashing for CaseInsensitiveMap lookups
StringUtilities.hashCodeIgnoreCase(String) now accesses String's internal
byte[] value and byte coder fields via reflection on JDK 9+. For LATIN1
strings (ASCII map keys), this bypasses charAt()'s per-character coder
check and method call overhead, hashing bytes directly.

Graceful fallback to charAt()-based hashing on JDK 8, JDK 16+ without
--add-opens, or UTF16-encoded strings.

CaseInsensitiveMap benchmark (100K entries):
  GET:            230 → 118 ns/op (-49%)
  MIXED-CASE GET: 302 → 131 ns/op (-57%)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>